# sslo

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
doc/: DeriveableParams.dia  db.dia  db_league_member.dia  db_league_members.dia  driver_level.ods  html_structure_league.dia  login.dia  openapi_league.yaml  permissions.dia  sslo_league.toml  user_grade.dia
rsc/css/: login.css  login2.css  main.css  user.css  user_accounts.css
rsc/css/lobby/: login.css
rsc/db_migrations/league_members/: 2024101722_initial.sql  20241025_initial.sql  20241026_initial.sql  20241028_initial.sql  20241029_initial.sql  20241102_initial.sql  20241105_initial.sql  20241918_initial.sql  20241919_initial.sql  20241923_initial.sql  20250228_initial.sql  20250325_initial.sql
rsc/db_migrations/league_users/: 2024100823_initial.sql
rsc/db_migrations/lobby_members/: 20250329_initial.sql
rsc/js/: login.js  login2.js  main.js  user.js  user_accounts.js  user_profile.js
sslo_central/: Cargo.toml
sslo_central/src/: http.rs  main.rs
sslo_central/src/http/: route_rsc.rs
sslo_community/: Cargo.toml
sslo_community/src/: app_state.rs  main.rs
sslo_community/src/db/: users.rs
sslo_community/src/http/: route_html_login.rs
sslo_league/: Cargo.toml
sslo_league/src/: app_state.rs  config.rs  db.rs  db2.rs  helpers.rs  http.rs  main.rs  user_grade.rs
sslo_league/src/db/: league.rs  members.rs  users.rs
sslo_league/src/db/members/: cookie_logins.rs  email.rs  emails.rs  steam_users.rs  users.rs
sslo_league/src/db2/: members.rs
sslo_league/src/db2/members/: cookie_logins.rs  email_accounts.rs  steam_accounts.rs  steam_users.rs  users.rs
sslo_league/src/db2/members/cookie_logins/: item.rs  row.rs
sslo_league/src/db2/members/steam_users/: item.rs  row.rs
sslo_league/src/db2/members/users/: item.rs  row.rs  table.rs
sslo_league/src/db_obsolete/: members.rs
sslo_league/src/db_obsolete/members/: cookie_logins.rs  steam_users.rs  users.rs
sslo_league/src/http/: extract_user.rs  http_user.rs  route_html_login.rs  routes_html.rs  routes_rest_v0.rs
sslo_league/src/http/routes_html/: home.rs  login.rs  login2.rs  user.rs
sslo_league/src/http/routes_html/user/: accounts.rs
sslo_league/src/http/routes_rest_v0/: login.rs  login_email.rs  login_password.rs  user.rs
sslo_league/src/http/routes_rest_v0/user/: account.rs
sslo_lib/: Cargo.toml
sslo_lib/src/: db.rs  error.rs  html.rs  http.rs  http_routes.rs  lib.rs  optional_date.rs  token.rs
sslo_lib/src/http_routes/: static_resources.rs
sslo_lobby/: Cargo.toml
sslo_lobby/src/: app_state.rs  config.rs  db.rs  http.rs  main.rs
sslo_lobby/src/db/: members.rs
sslo_lobby/src/db/members/: cookie_logins.rs  steam_accounts.rs  users.rs
sslo_lobby/src/http/: http_user.rs
sslo_lobby/src/http/routes_html/: home.rs  login.rs
test_db/: sslo_league.toml
