[package]
name = "sslo_league"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
sslo_lib = {path="../sslo_lib"}
