[package]
name = "sslo_league"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
sslo_lib = {path="../sslo_lib"}
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
thiserror = "1.0.64"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
