[package]
name = "sslo_league"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
sslo_lib = {path="../sslo_lib"}
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
thiserror = "1.0.64"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono"] }
log = { version = "0.4.22", features = ["release_max_level_info"] }
env_logger = "0.11.5"
lettre = { version = "0.11.9", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-native-tls"] }
rand = "0.8.5"
chrono = "0.4.38"
hex = "0.4.3"
regex = "1.11.1"
rust-argon2 = "2.1.0"
steamopenid = "0.3.0"
test-log = { version = "0.2.16", features = ["trace", "color"] }
html-escape = "0.2.13"
