[package]
name = "sslo_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hex = "0.4.3"
log = "0.4.22"
rand = "0.8.5"
rust-argon2 = "2.1.0"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono"] }
